Prometheus & Grafana + docs: update README with monitoring, testing, CI/CD sections